--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -6,10 +6,186 @@
   "language": "اللغة",
   "english": "الإنجليزية",
   "arabic": "العربية",
+  "french": "الفرنسية",
   "popularAnime": "أنمي شائع",
   "explore": "اكتشف",
   "home": "الرئيسية",
   "darkMode": "الوضع المظلم",
   "latestNews": "أحدث أخبار الأنمي",
-  "broadcastSchedule": "جدول البث"
+  "broadcastSchedule": "جدول البث",
+  "episodes": "الحلقات",
+  "series": "السلاسل",
+  "movies": "الأفلام",
+  "search": "بحث",
+  "characters": "الشخصيات",
+  "library": "المكتبة",
+  "community": "المجتمع",
+  "history": "السجل",
+  "latestEpisodes": "أحدث الحلقات",
+  "currentSeason": "الموسم الحالي",
+  "seeAll": "شاهد الكل",
+  "welcomeBack": "مرحباً بعودتك",
+  "signInToContinue": "سجل الدخول للمتابعة",
+  "emailAddress": "عنوان البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "login": "تسجيل الدخول",
+  "createAccount": "إنشاء حساب",
+  "joinCommunity": "انضم إلى مجتمع أنمي هات",
+  "username": "اسم المستخدم",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "signup": "إنشاء حساب",
+  "alreadyHaveAccount": "لديك حساب بالفعل؟",
+  "dontHaveAccount": "ليس لديك حساب؟",
+  "createOne": "أنشئ واحداً",
+  "pleaseFillAllFields": "يرجى ملء جميع الحقول",
+  "passwordsDoNotMatch": "كلمات المرور غير متطابقة",
+  "appTheme": "ثيم التطبيق",
+  "customizeAppearance": "تخصيص الألوان والمظهر",
+  "backgroundSync": "مزامنة الخلفية",
+  "autoUpload": "رفع تلقائي (مزامنة)",
+  "updateLibraryBackground": "تحديث المكتبة في الخلفية",
+  "syncSpeed": "سرعة المزامنة",
+  "manualFullSync": "مزامنة كاملة يدوية",
+  "forceUpdateLibrary": "تحديث كامل للمكتبة الآن",
+  "start": "ابدأ",
+  "backupAllData": "نسخ احتياطي للبيانات",
+  "exportDataFolder": "تصدير جميع بيانات الأنمي للمجلد",
+  "restoreAllData": "استعادة البيانات",
+  "importBackupFile": "استيراد البيانات من ملف نسخ احتياطي",
+  "syncUserProfile": "مزامنة الملف الشخصي",
+  "createUpdateProfile": "إنشاء/تحديث ملفك الشخصي",
+  "offlineStorage": "التخزين المحلي",
+  "downloadAllData": "تحميل جميع البيانات",
+  "storeInfoOffline": "تخزين معلومات الأنمي للاستخدام بدون إنترنت",
+  "clearLocalCache": "مسح التخزين المؤقت",
+  "freeUpSpace": "تفريغ مساحة عن طريق حذف البيانات المؤقتة",
+  "adminDashboard": "لوحة تحكم المسؤول",
+  "manageApp": "إدارة الإعدادات والمستخدمين والمحتوى",
+  "checkForUpdates": "التحقق من التحديثات",
+  "ensureLatestVersion": "تأكد من أنك تعمل على أحدث إصدار",
+  "continueWatching": "متابعة المشاهدة",
+  "userNotFound": "المستخدم غير موجود",
+  "overview": "نظرة عامة",
+  "activity": "النشاط",
+  "animeStats": "إحصائيات الأنمي",
+  "completed": "مكتمل",
+  "watching": "يشاهد حالياً",
+  "time": "الوقت",
+  "socialLinks": "الروابط الاجتماعية",
+  "noSocialLinks": "لم يتم إضافة روابط اجتماعية.",
+  "joined": "انضم منذ",
+  "noRecentActivity": "لا يوجد نشاط حديث",
+  "editProfile": "تعديل الملف الشخصي",
+  "signInOrCreateAccount": "تسجيل الدخول / إنشاء حساب",
+  "logout": "تسجيل الخروج",
+  "myAccount": "حسابي",
+  "myLibrary": "مكتبتي",
+  "loginToFavorite": "يرجى تسجيل الدخول للإضافة إلى المفضلة",
+  "loginToLibrary": "يرجى تسجيل الدخول للإضافة إلى المكتبة",
+  "selectCategory": "اختر الفئة",
+  "createNewCategory": "إنشاء فئة جديدة",
+  "newCategory": "فئة جديدة",
+  "categoryName": "اسم الفئة",
+  "cancel": "إلغاء",
+  "create": "إنشاء",
+  "loginToRate": "يرجى تسجيل الدخول للتقييم",
+  "rateThisAnime": "قيم هذا الأنمي",
+  "stars": "نجوم",
+  "rate": "تقييم",
+  "information": "المعلومات",
+  "plot": "القصة",
+  "viewEpisodes": "عرض الحلقات",
+  "favorited": "في المفضلة",
+  "favorite": "مفضلة",
+  "inLibrary": "في المكتبة",
+  "comments": "التعليقات",
+  "status": "الحالة",
+  "type": "النوع",
+  "duration": "المدة",
+  "released": "تاريخ الإصدار",
+  "studio": "الاستوديو",
+  "popularity": "الشعبية",
+  "members": "الأعضاء",
+  "favorites": "المفضلون",
+  "unknown": "غير معروف",
+  "resumePlaying": "هل تريد الاستمرار؟",
+  "resumePrompt": "توقفت عند {time}. هل تريد الاستمرار من هناك؟",
+  "startOver": "البدء من جديد",
+  "resume": "استمرار",
+  "noEpisodesFound": "لم يتم العثور على حلقات.",
+  "episodePrefix": "الحلقة ",
+  "season": "الموسم",
+  "rating": "التصنيف العمري",
+  "failedToResolveLink": "فشل في جلب رابط الفيديو. يرجى المحاولة مرة أخرى.",
+  "selectQuality": "اختر الجودة",
+  "noServersAvailable": "لا توجد خوادم متاحة لهذه الحلقة.",
+  "mediaUnavailable": "رابط الوسائط غير متاح.",
+  "retry": "إعادة المحاولة",
+  "startingPlayer": "بدء المشغل",
+  "resolvingLink": "جاري جلب الرابط المباشر لأفضل سرعة...",
+  "epShort": "حلقة",
+  "auto": "تلقائي",
+  "loginToPost": "يرجى تسجيل الدخول للنشر",
+  "anonymous": "مجهول",
+  "discussion": "مناقشة",
+  "postedSuccessfully": "تم النشر بنجاح!",
+  "errorPrefix": "حدث خطأ",
+  "clubSuffix": "نادي",
+  "community": "المجتمع",
+  "postHint": "بماذا تفكر؟",
+  "noComments": "لا توجد تعليقات بعد.",
+  "noPosts": "لا توجد منشورات بعد.",
+  "loginToReply": "يرجى تسجيل الدخول للرد",
+  "repliesSoon": "الردود على المنشورات قريبا!",
+  "replyLabel": "رد",
+  "replyHint": "اكتب رداً...",
+  "replyAdded": "تم إضافة الرد!",
+  "spoiler": "حرق",
+  "showContent": "عرض المحتوى",
+  "viewReplies": "عرض الردود",
+  "hideReplies": "إخفاء الردود",
+  "accessDenied": "تم رفض الوصول: ليس لديك إذن لعرض هذه الصفحة.",
+  "adminDashboard": "لوحة التحكم",
+  "stats": "الإحصائيات",
+  "general": "عام",
+  "updates": "التحديثات",
+  "ads": "الإعلانات",
+  "featured": "المميزة",
+  "users": "المستخدمين",
+  "announce": "الإعلانات العامة",
+  "totalUsers": "إجمالي المستخدمين",
+  "totalPosts": "إجمالي المنشورات",
+  "systemLogs": "سجلات النظام",
+  "clear": "مسح",
+  "logsCleared": "تم مسح السجلات",
+  "noLogsFound": "لا توices سجلات",
+  "systemDiagnostics": "تشخيص النظام",
+  "runIntegrityCheck": "تشغيل فحص السلامة",
+  "runningDiagnostics": "جاري تشغيل التشخيص...",
+  "diagnosticsComplete": "اكتمل التشخيص",
+  "maintenance": "الصيانة",
+  "maintenanceMode": "وضع الصيانة",
+  "maintenanceMessage": "رسالة الصيانة",
+  "updateMessage": "تحديث الرسالة",
+  "appUpdates": "تحديثات التطبيق",
+  "latestVersion": "أحدث إصدار متاح",
+  "minVersion": "أقل إصدار مطلوب",
+  "directUpdateUrl": "رابط التحديث المباشر (APK)",
+  "updateNotes": "ملاحظات التحديث",
+  "forceUpdate": "تحديث إجباري",
+  "saveUpdateSettings": "حفظ إعدادات التحديث",
+  "adManagement": "إدارة الإعلانات",
+  "showAdsGlobally": "إظهار الإعلانات للجميع",
+  "searchUsers": "البحث عن مستخدمين...",
+  "activeAccount": "حساب نشط",
+  "administrator": "مشرف",
+  "newAnnouncement": "إعلان جديد",
+  "broadcast": "بث",
+  "announcementBroadcasted": "تم بث الإعلان",
+  "successImportant": "ناجح/مهم",
+  "warningMaintenance": "تحذير/صيانة",
+  "title": "العنوان",
+  "content": "المحتوى",
+  "skipIntro": "تخطي البداية",
+  "autoSkipIntro": "تخطي تلقائي للبداية"
 }
