--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,10 +9,193 @@
   "language": "Language",
   "english": "English",
   "arabic": "Arabic",
+  "french": "French",
   "popularAnime": "Popular Anime",
   "explore": "Explore",
   "home": "Home",
   "darkMode": "Dark Mode",
   "latestNews": "Latest Anime News",
-  "broadcastSchedule": "Broadcast Schedule"
+  "broadcastSchedule": "Broadcast Schedule",
+  "episodes": "Episodes",
+  "series": "Series",
+  "movies": "Movies",
+  "search": "Search",
+  "characters": "Characters",
+  "library": "Library",
+  "community": "Community",
+  "history": "History",
+  "latestEpisodes": "Latest Episodes",
+  "currentSeason": "Current Season",
+  "seeAll": "See All",
+  "welcomeBack": "Welcome Back",
+  "signInToContinue": "Sign in to continue your journey",
+  "emailAddress": "Email Address",
+  "password": "Password",
+  "login": "Login",
+  "createAccount": "Create Account",
+  "joinCommunity": "Join the AnimeHat community",
+  "username": "Username",
+  "confirmPassword": "Confirm Password",
+  "signup": "Sign Up",
+  "alreadyHaveAccount": "Already have an account?",
+  "dontHaveAccount": "Don't have an account?",
+  "createOne": "Create one",
+  "pleaseFillAllFields": "Please fill in all fields",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "appTheme": "App Theme",
+  "customizeAppearance": "Customize colors and appearance",
+  "backgroundSync": "Background Sync",
+  "autoUpload": "Auto-Upload (Sync)",
+  "updateLibraryBackground": "Update library in the background",
+  "syncSpeed": "Sync Speed",
+  "manualFullSync": "Manual Full Sync",
+  "forceUpdateLibrary": "Force update the entire library now",
+  "start": "Start",
+  "backupAllData": "Backup All Data",
+  "exportDataFolder": "Export all anime data and links to a folder",
+  "restoreAllData": "Restore All Data",
+  "importBackupFile": "Import anime data from a backup file",
+  "syncUserProfile": "Sync User Profile",
+  "createUpdateProfile": "Create/Update your profile in database",
+  "offlineStorage": "Offline Storage",
+  "downloadAllData": "Download All Data",
+  "storeInfoOffline": "Store anime info and links for offline use",
+  "clearLocalCache": "Clear Local Cache",
+  "freeUpSpace": "Free up space by removing cached data",
+  "adminDashboard": "Admin Dashboard",
+  "manageApp": "Manage app settings, users, and content",
+  "checkForUpdates": "Check for Updates",
+  "ensureLatestVersion": "Ensure you are running the latest version",
+  "continueWatching": "Continue Watching",
+  "userNotFound": "User not found",
+  "overview": "Overview",
+  "activity": "Activity",
+  "animeStats": "Anime Stats",
+  "completed": "Completed",
+  "watching": "Watching",
+  "time": "Time",
+  "socialLinks": "Social Links",
+  "noSocialLinks": "No social links added.",
+  "joined": "Joined",
+  "noRecentActivity": "No recent activity",
+  "editProfile": "Edit Profile",
+  "signInOrCreateAccount": "Sign In/Create Account",
+  "logout": "Sign Out",
+  "myAccount": "MY ACCOUNT",
+  "myLibrary": "MY LIBRARY",
+  "loginToFavorite": "Please login to add to favorites",
+  "loginToLibrary": "Please login to add to library",
+  "selectCategory": "Select Category",
+  "createNewCategory": "Create New Category",
+  "newCategory": "New Category",
+  "categoryName": "Category Name",
+  "cancel": "Cancel",
+  "create": "Create",
+  "loginToRate": "Please login to rate",
+  "rateThisAnime": "Rate this Anime",
+  "stars": "Stars",
+  "rate": "Rate",
+  "information": "Information",
+  "plot": "Plot",
+  "viewEpisodes": "VIEW EPISODES",
+  "favorited": "Favorited",
+  "favorite": "Favorite",
+  "inLibrary": "In Library",
+  "comments": "Comments",
+  "status": "Status",
+  "type": "Type",
+  "duration": "Duration",
+  "released": "Released",
+  "studio": "Studio",
+  "popularity": "Popularity",
+  "members": "Members",
+  "favorites": "Favorites",
+  "unknown": "Unknown",
+  "resumePlaying": "Resume Playing?",
+  "resumePrompt": "You stopped at {time}. Do you want to resume?",
+  "@resumePrompt": {
+    "placeholders": {
+      "time": {
+        "type": "String"
+      }
+    }
+  },
+  "startOver": "Start Over",
+  "resume": "Resume",
+  "noEpisodesFound": "No episodes found.",
+  "episodePrefix": "Episode ",
+  "season": "Season",
+  "rating": "Rating",
+  "failedToResolveLink": "Failed to resolve video link. Please try again.",
+  "selectQuality": "Select Quality",
+  "noServersAvailable": "No servers available for this episode.",
+  "mediaUnavailable": "Media link unavailable.",
+  "retry": "RETRY",
+  "startingPlayer": "Starting Player",
+  "resolvingLink": "Resolving direct link for fastest speed...",
+  "epShort": "Ep",
+  "auto": "Auto",
+  "loginToPost": "Please login to post",
+  "anonymous": "Anonymous",
+  "discussion": "Discussion",
+  "postedSuccessfully": "Posted successfully!",
+  "errorPrefix": "Error",
+  "clubSuffix": "Club",
+  "community": "Community",
+  "postHint": "What's on your mind?",
+  "noComments": "No comments yet.",
+  "noPosts": "No posts yet.",
+  "loginToReply": "Please login to reply",
+  "repliesSoon": "Replies to posts coming soon!",
+  "replyLabel": "Reply",
+  "replyHint": "Write a reply...",
+  "replyAdded": "Reply added!",
+  "spoiler": "Spoiler",
+  "showContent": "Show Content",
+  "viewReplies": "View Replies",
+  "hideReplies": "Hide Replies",
+  "accessDenied": "Access Denied: You do not have permission to view this page.",
+  "adminDashboard": "Admin Dashboard",
+  "stats": "Stats",
+  "general": "General",
+  "updates": "Updates",
+  "ads": "Ads",
+  "featured": "Featured",
+  "users": "Users",
+  "announce": "Announce",
+  "totalUsers": "Total Users",
+  "totalPosts": "Total Posts",
+  "systemLogs": "System Logs",
+  "clear": "Clear",
+  "logsCleared": "Logs cleared",
+  "noLogsFound": "No logs found",
+  "systemDiagnostics": "System Diagnostics",
+  "runIntegrityCheck": "Run Integrity Check",
+  "runningDiagnostics": "Running diagnostics...",
+  "diagnosticsComplete": "Diagnostics Complete",
+  "maintenance": "Maintenance",
+  "maintenanceMode": "Maintenance Mode",
+  "maintenanceMessage": "Maintenance Message",
+  "updateMessage": "Update Message",
+  "appUpdates": "App Updates",
+  "latestVersion": "Latest Available Version",
+  "minVersion": "Min Required Version",
+  "directUpdateUrl": "Direct Update URL (APK)",
+  "updateNotes": "Update Notes (Changelog)",
+  "forceUpdate": "Force Update",
+  "saveUpdateSettings": "Save Update Settings",
+  "adManagement": "Ad Management",
+  "showAdsGlobally": "Show Ads Globally",
+  "searchUsers": "Search users...",
+  "activeAccount": "Active Account",
+  "administrator": "Administrator",
+  "newAnnouncement": "New Announcement",
+  "broadcast": "Broadcast",
+  "announcementBroadcasted": "Announcement Broadcasted",
+  "successImportant": "Success/Important",
+  "warningMaintenance": "Warning/Maintenance",
+  "title": "Title",
+  "content": "Content",
+  "skipIntro": "Skip Intro",
+  "autoSkipIntro": "Auto Skip Intro"
 }
